--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="header__nav--ul">
                 <li class="header__ul--item"><a href="#Home">Home</a></li>
                 <li class="header__ul--item"><a href="#About">About</a></li>
-                <li class="header__ul--item"><a href="#Gallery">Gallery</a></li>
+                <li class="header__ul--item"><a href="#Gallery">Projets</a></li>
                 <li class="header__ul--item"><a href="#Contact">Contact</a></li>
             </ul>
         </nav>
@@ -70,7 +70,8 @@
         </section>
         <section class="main__gallery" id="Gallery">
             <figure class="gallery__item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi, autem animi dignissimos omnis
+                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
+                    autem animi dignissimos omnis
                     sapiente.</p>
                 <div class="gallery__item--sub-container">
                     <picture>
@@ -82,7 +83,8 @@
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi, autem animi dignissimos omnis
+                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
+                    autem animi dignissimos omnis
                     sapiente.</p>
                 <div class="gallery__item--sub-container">
                     <picture>
@@ -94,7 +96,8 @@
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi, autem animi dignissimos omnis
+                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
+                    autem animi dignissimos omnis
                     sapiente.</p>
                 <div class="gallery__item--sub-container">
                     <picture>
@@ -106,7 +109,8 @@
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi, autem animi dignissimos omnis
+                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
+                    autem animi dignissimos omnis
                     sapiente.</p>
                 <div class="gallery__item--sub-container">
                     <picture>
