--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meta Description -->
-    <meta name="description" content="Boostez votre visibilité sur Google avec notre agence SEO.">
+    <meta name="description" content="Boostez votre visibilité sur Google avec notre agence SEO." />
     <!-- Meta Robots -->
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
     <!-- Canonical URL (évite le contenu dupliqué) -->
-    <link rel="canonical" href="https://www.exemple.com/agence-seo-paris/">
+    <link rel="canonical" href="https://www.exemple.com/agence-seo-paris/" />
     <!-- Auteur et langue -->
-    <meta name="author" content="Agence Web Paris">
-    <meta http-equiv="Content-Language" content="fr">
+    <meta name="author" content="Agence Web Paris" />
+    <meta http-equiv="Content-Language" content="fr" />
     <!-- Open Graph (réseaux sociaux) -->
-    <meta property="og:title" content="Agence SEO à Paris - Experts en Référencement Naturel">
-    <meta property="og:description" content="Découvrez notre agence SEO à Paris pour améliorer votre.">
-    <meta property="og:image" content="https://www.exemple.com/images/seo-paris.jpg">
-    <meta property="og:url" content="https://www.exemple.com/agence-seo-paris/">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="fr_FR">
+    <meta property="og:title" content="Agence SEO à Paris - Experts en Référencement Naturel" />
+    <meta property="og:description" content="Découvrez notre agence SEO à Paris pour améliorer votre." />
+    <meta property="og:image" content="https://www.exemple.com/images/seo-paris.jpg" />
+    <meta property="og:url" content="https://www.exemple.com/agence-seo-paris/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Agence SEO à Paris - Référencement Naturel">
-    <meta name="twitter:description" content="Boostez votre visibilité avec notre agence SEO basée à Paris.">
-    <meta name="twitter:image" content="https://www.exemple.com/images/seo-paris.jpg">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Agence SEO à Paris - Référencement Naturel" />
+    <meta name="twitter:description" content="Boostez votre visibilité avec notre agence SEO basée à Paris." />
+    <meta name="twitter:image" content="https://www.exemple.com/images/seo-paris.jpg" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <title>Architecturale</title>
 </head>
 
@@ -46,15 +46,13 @@
     </header>
     <main>
         <section class="main__home" id="Home">
-            <p class="home__text--presentaion">Lorem ipsum dolor sit amet <strong><em>consectetur</em></strong>,
-                adipisicing elit. Blanditiis esse
-                a delectus assumenda doloremque
-                quasi nihil sint! Incidunt amet quis eos. <strong><em>Quod a in sed</em></strong>. Numquam vitae iusto,
-                laborum
-                labore ad sed
-                culpa provident <strong><em>veritatis eius</em></strong>, dicta vero aut ex sint
-                <strong><em>deserunt</em></strong>. Facilis,
-                sequi voluptate.
+            <p class="home__text--presentaion">
+                Lorem ipsum dolor sit amet <strong><em>consectetur</em></strong>, adipisicing elit. Blanditiis esse a
+                delectus assumenda doloremque
+                quasi nihil sint! Incidunt amet quis eos.
+                <strong><em>Quod a in sed</em></strong>. Numquam vitae iusto, laborum labore ad sed culpa provident
+                <strong><em>veritatis eius</em></strong>, dicta vero aut ex sint <strong><em>deserunt</em></strong>.
+                Facilis, sequi voluptate.
             </p>
         </section>
         <section class="main__about" id="About">
@@ -63,75 +61,93 @@
                     <h3>Lorem, ipsum dolor.</h3>
                     <h4>Lorem ipsum dolor sit.</h4>
                 </hgroup>
-                <p class="about__txt--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-                    repudiandae, illum at, magnam
-                    veritatis aut magni incidunt maiores vitae placeat numquam animi libero saepe fuga?</p>
+                <p class="about__txt--description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+                    repudiandae, illum at, magnam veritatis aut magni incidunt maiores
+                    vitae placeat numquam animi libero saepe fuga?
+                </p>
             </article>
         </section>
         <section class="main__gallery" id="Gallery">
             <figure class="gallery__item">
-                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
-                    autem animi dignissimos omnis
-                    sapiente.</p>
+                <p class="gallery__item--txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                    sequi, autem animi dignissimos omnis sapiente.
+                </p>
                 <div class="gallery__item--sub-container">
                     <picture>
-                        <source media="(min-width:650px)" srcset="assets/images/house/house1.webp">
-                        <source media="(min-width:465px)" srcset="assets/images/house/house1.webp">
-                        <img src="assets/images/house/house1.webp" alt="house1">
+                        <source media="(min-width:650px)" srcset="assets/images/house/house1.webp" />
+                        <source media="(min-width:465px)" srcset="assets/images/house/house1.webp" />
+                        <img src="assets/images/house/house1.webp" alt="house1" />
                     </picture>
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.</figcaption>
+                    <figcaption>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </figcaption>
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
-                    autem animi dignissimos omnis
-                    sapiente.</p>
+                <p class="gallery__item--txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                    sequi, autem animi dignissimos omnis sapiente.
+                </p>
                 <div class="gallery__item--sub-container">
                     <picture>
-                        <source media="(min-width:650px)" srcset="assets/images/house/house2.webp">
-                        <source media="(min-width:465px)" srcset="assets/images/house/house2.webp">
-                        <img src="assets/images/house/house2.webp" alt="house2">
+                        <source media="(min-width:650px)" srcset="assets/images/house/house2.webp" />
+                        <source media="(min-width:465px)" srcset="assets/images/house/house2.webp" />
+                        <img src="assets/images/house/house2.webp" alt="house2" />
                     </picture>
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.</figcaption>
+                    <figcaption>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </figcaption>
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
-                    autem animi dignissimos omnis
-                    sapiente.</p>
+                <p class="gallery__item--txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                    sequi, autem animi dignissimos omnis sapiente.
+                </p>
                 <div class="gallery__item--sub-container">
                     <picture>
-                        <source media="(min-width:650px)" srcset="assets/images/house/house3.webp">
-                        <source media="(min-width:465px)" srcset="assets/images/house/house3.webp">
-                        <img src="assets/images/house/house3.webp" alt="house3">
+                        <source media="(min-width:650px)" srcset="assets/images/house/house3.webp" />
+                        <source media="(min-width:465px)" srcset="assets/images/house/house3.webp" />
+                        <img src="assets/images/house/house3.webp" alt="house3" />
                     </picture>
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.</figcaption>
+                    <figcaption>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </figcaption>
                 </div>
             </figure>
             <figure class="gallery__item">
-                <p class="gallery__item--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia sequi,
-                    autem animi dignissimos omnis
-                    sapiente.</p>
+                <p class="gallery__item--txt">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                    sequi, autem animi dignissimos omnis sapiente.
+                </p>
                 <div class="gallery__item--sub-container">
                     <picture>
-                        <source media="(min-width:650px)" srcset="assets/images/house/house4.webp">
-                        <source media="(min-width:465px)" srcset="assets/images/house/house4.webp">
-                        <img src="assets/images/house/house4.webp" alt="house4">
+                        <source media="(min-width:650px)" srcset="assets/images/house/house4.webp" />
+                        <source media="(min-width:465px)" srcset="assets/images/house/house4.webp" />
+                        <img src="assets/images/house/house4.webp" alt="house4" />
                     </picture>
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.</figcaption>
+                    <figcaption>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </figcaption>
                 </div>
             </figure>
         </section>
         <section class="main__contact" id="Contact">
-            <fieldset>
+            <fieldset class="main__contact--field">
                 <legend>Contact</legend>
                 <form action="data_contact.txt" method="post">
-                    <input type="text" placeholder="Nom">
-                    <input type="text" placeholder="Prenom">
-                    <input type="email" placeholder="E-mail">
-                    <input type="tel" placeholder="Tel">
-                    <textarea cols="30" rows="10" placeholder="Message"></textarea>
-                    <input type="submit" value="Envoyer">
+                    <div class="contact__form--sub-container">
+                        <input type="text" placeholder="Nom (25charactère max)" maxlength="25" required />
+                        <input type="text" placeholder="Prenom (25charactère max)" maxlength="25" required />
+                    </div>
+                    <div class="contact__form--sub-container">
+                        <input type="email" placeholder="E-mail" required />
+                        <input type="tel" placeholder="Tel ex:+32....." required />
+                    </div>
+                    <textarea cols="30" rows="10" placeholder="Message" required></textarea>
+                    <input type="submit" value="Envoyer" />
                 </form>
             </fieldset>
         </section>
