--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <meta name="twitter:title" content="Agence SEO à Paris - Référencement Naturel" />
     <meta name="twitter:description" content="Boostez votre visibilité avec notre agence SEO basée à Paris." />
     <meta name="twitter:image" content="https://www.exemple.com/images/seo-paris.jpg" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Architecturale</title>
@@ -44,6 +46,7 @@
             </ul>
         </nav>
     </header>
+    <a href="#" class="back__to-top"><i class="fa-solid fa-arrow-up"></i></a>
     <main>
         <section class="main__home" id="Home">
             <p class="home__text--presentaion">
@@ -153,9 +156,12 @@
         </section>
     </main>
     <footer>
-        <small>©By Script'Enjoyer</small>
-        <small>All right reserved</small>
+        <div class="footer__signature--container">
+            <small>©By Script'Enjoyer</small>
+            <small>All right reserved</small>
+        </div>
     </footer>
+    <script src="https://kit.fontawesome.com/268e7a0888.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
